# mnist42

./: .gitignore  Dockerfile  MANIFEST.in  README.md  ml-work-cronjob  pyproject.toml  run.sh  run_db.sh
src/mnist/: db.py  line_notify.py  main.py  pred.py  worker.py
