[project]
name = "mnist"
version = "0.2.0"
description = "MNIST"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.114.1",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
    "tz-kst>=0.5.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.setuptools]
package-dir = {"" = "src"}
