[project]
name = "mnist"
version = "0.6.0"
description = "MNIST"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.114.1",
    "python-multipart>=0.0.9",
    "pymysql>=1.1.1",
    "tz_kst>=0.5.2",
    "requests>=2.32.3",
    "pillow>=10.4.0",
    "tensorflow>=2.17.0",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ml-worker = 'mnist.worker:run'

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
[tool.setuptools]
package-dir = {"" = "src"}
